--- a/css/_communities.scss
+++ b/css/_communities.scss
@@ -44,6 +44,7 @@ $nav-gradient-2: #BAD533;
 	    .community-name{
  	    	padding: 0 0 .2em 0;
 	    	vertical-align: text-bottom; 
+	    	text-transform: capitalize;
  	    }
 		.details{
 			font-size:.8em;
