--- a/css/style.css
+++ b/css/style.css
@@ -2142,6 +2142,7 @@ body {
   color: #777;
   min-height: 21px;
   margin: .1em .2em .1em 47px;
+  font-size: .9em;
 }
 /* line 19, _timeline.scss */
 .timeline-news-single p.post-meta {
@@ -3205,6 +3206,7 @@ input[type=checkbox] {
 }
 /* line 793, style.scss */
 .post-content {
+    font-size: .9em;
   color: #4c4c4c;
   line-height: 1.5em;
 }
